lab6/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service1
  labels:
    app: service1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service1
  template:
    metadata:
      labels:
        app: service1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: nginx-lp
          mountPath: /usr/share/nginx/html/v1/
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-lp
        configMap:
          name: nginx-lp1
          items:
          - key: page
            path: index.html
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf

---

apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: service1
  type: NodePort
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service2
  labels:
    app: service2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service2
  template:
    metadata:
      labels:
        app: service2
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: nginx-lp
          mountPath: /usr/share/nginx/html/v2/
      volumes:
      - name: nginx-lp
        configMap:
          name: nginx-lp2
          items:
          - key: page
            path: index.html

---

apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: service2
  type: NodePort
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service3
  labels:
    app: service3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service3
  template:
    metadata:
      labels:
        app: service3
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: nginx-lp
          mountPath: /usr/share/nginx/html/v1/
        - name: nginx-config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: nginx-lp
        configMap:
          name: nginx-lp1
          items:
          - key: page
            path: index.html
      - name: nginx-config
        configMap:
          name: nginx-config
          items:
          - key: nginx.conf
            path: nginx.conf

---

apiVersion: v1
kind: Service
metadata:
  name: service3
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: service3
  type: NodePort
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: service4
  labels:
    app: service4
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service4
  template:
    metadata:
      labels:
        app: service4
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: nginx-lp
          mountPath: /usr/share/nginx/html/v2/
      volumes:
      - name: nginx-lp
        configMap:
          name: nginx-lp2
          items:
          - key: page
            path: index.html

---

apiVersion: v1
kind: Service
metadata:
  name: service4
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: service4
  type: NodePort
